sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.error
AlgBubbleSort2:4: error: ')' expected but ',' found.
  for (i <- n-1 to 0,-1 ){
                    ^AlgBubbleSort2:11: error: illegal start of simple expression
  }
  ^